compil error 1
In file included from /home/pi/midiMind/backend/src/api/CommandProcessorV2.h:45,
                 from /home/pi/midiMind/backend/src/api/CommandProcessorV2.cpp:40:
/home/pi/midiMind/backend/src/api/../core/commands/CommandFactory.h:36:10: fatal error: ../interfaces/ICommand.h: No such file or directory
   36 | #include "../interfaces/ICommand.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
In file included from /home/pi/midiMind/backend/src/core/Application.cpp:39:
/home/pi/midiMind/backend/src/core/Application.h:44:10: fatal error: ../midi/MidiDeviceManager.h: No such file or directory
   44 | #include "../midi/MidiDeviceManager.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:121: CMakeFiles/midimind.dir/src/api/CommandProcessorV2.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /home/pi/midiMind/backend/src/main.cpp:35:
/home/pi/midiMind/backend/src/core/Application.h:44:10: fatal error: ../midi/MidiDeviceManager.h: No such file or directory
   44 | #include "../midi/MidiDeviceManager.h"
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
make[2]: *** [CMakeFiles/midimind.dir/build.make:93: CMakeFiles/midimind.dir/src/core/Application.cpp.o] Error 1
make[2]: *** [CMakeFiles/midimind.dir/build.make:79: CMakeFiles/midimind.dir/src/main.cpp.o] Error 1
In file included from /home/pi/midiMind/backend/src/api/ApiServer.h:32,
                 from /home/pi/midiMind/backend/src/api/ApiServer.cpp:39:
/home/pi/midiMind/backend/src/api/Protocol.h: In static member function ‘static std::string midiMind::protocol::Envelope::generateUUID()’:
/home/pi/midiMind/backend/src/api/Protocol.h:292:17: error: ‘random_device’ in namespace ‘std’ does not name a type
  292 |     static std::random_device rd;
      |                 ^~~~~~~~~~~~~
/home/pi/midiMind/backend/src/api/Protocol.h:293:17: error: ‘mt19937_64’ in namespace ‘std’ does not name a type
  293 |     static std::mt19937_64 gen(rd());
      |                 ^~~~~~~~~~
/home/pi/midiMind/backend/src/api/Protocol.h:296:26: error: ‘gen’ was not declared in this scope
  296 |     uint64_t part1 = dis(gen);
      |                          ^~~
In file included from /home/pi/midiMind/backend/src/api/MessageEnvelope.h:23,
                 from /home/pi/midiMind/backend/src/api/ApiServer.cpp:40:
/home/pi/midiMind/backend/src/api/../core/Logger.h: At global scope:
/home/pi/midiMind/backend/src/api/../core/Logger.h:545:19: error: ‘static midiMind::Logger::Level& midiMind::Logger::getLevel()’ cannot be overloaded with ‘static midiMind::Logger::Level midiMind::Logger::getLevel()’
  545 |     static Level& getLevel() {
      |                   ^~~~~~~~
/home/pi/midiMind/backend/src/api/../core/Logger.h:177:18: note: previous declaration ‘static midiMind::Logger::Level midiMind::Logger::getLevel()’
  177 |     static Level getLevel() {
      |                  ^~~~~~~~
/home/pi/midiMind/backend/src/api/../core/Logger.h: In static member function ‘static void midiMind::Logger::setLevel(Level)’:
/home/pi/midiMind/backend/src/api/../core/Logger.h:169:17: error: lvalue required as left operand of assignment
  169 |         getLevel() = level;
      |         ~~~~~~~~^~
/home/pi/midiMind/backend/src/api/ApiServer.cpp: In member function ‘void midiMind::ApiServer::onOpen(websocketpp::connection_hdl)’:
/home/pi/midiMind/backend/src/api/ApiServer.cpp:218:72: error: ‘static int64_t midiMind::protocol::Envelope::getCurrentTimestamp()’ is private within this context
  218 |                 {"server_time", protocol::Envelope::getCurrentTimestamp()}
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
/home/pi/midiMind/backend/src/api/Protocol.h:311:16: note: declared private here
  311 | inline int64_t Envelope::getCurrentTimestamp() {
      |                ^~~~~~~~
/home/pi/midiMind/backend/src/api/ApiServer.cpp: In member function ‘void midiMind::ApiServer::onMessage(websocketpp::connection_hdl, message_ptr)’:
/home/pi/midiMind/backend/src/api/ApiServer.cpp:365:45: error: ‘DEVICE_BUSY’ is not a member of ‘midiMind::protocol::ErrorCode’
  365 |                 code = protocol::ErrorCode::DEVICE_BUSY;
      |                                             ^~~~~~~~~~~
make[2]: *** [CMakeFiles/midimind.dir/build.make:107: CMakeFiles/midimind.dir/src/api/ApiServer.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:87: CMakeFiles/midimind.dir/all] Error 2
make: *** [Makefile:156: all] Error 2
